<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameFragmentId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragmentMP3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boardConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gameInfoConstraintLayout">
        <ImageButton
            android:id="@+id/button0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button1"
            app:layout_constraintBottom_toTopOf="@id/button3"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter"
            android:hint="@string/x_string">
        </ImageButton>

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toRightOf="@+id/button0"
            app:layout_constraintRight_toLeftOf="@id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button4"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button12"
            app:layout_constraintLeft_toRightOf="@id/button1"
            app:layout_constraintBottom_toTopOf="@id/button5"
            android:background="@drawable/square_shape"
            android:hint="@string/o_string"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button0"
            app:layout_constraintBottom_toTopOf="@id/button6"
            app:layout_constraintRight_toLeftOf="@id/button4"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button1"
            app:layout_constraintBottom_toTopOf="@id/button7"
            app:layout_constraintLeft_toRightOf="@id/button3"
            app:layout_constraintRight_toLeftOf="@id/button5"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button2"
            app:layout_constraintBottom_toTopOf="@id/button8"
            app:layout_constraintLeft_toRightOf="@id/button4"
            app:layout_constraintRight_toLeftOf="@id/button13"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button3"
            app:layout_constraintBottom_toTopOf="@id/button9"
            app:layout_constraintRight_toLeftOf="@id/button7"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button4"
            app:layout_constraintBottom_toTopOf="@id/button10"
            app:layout_constraintLeft_toRightOf="@id/button6"
            app:layout_constraintRight_toLeftOf="@id/button8"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button5"
            app:layout_constraintBottom_toTopOf="@id/button11"
            app:layout_constraintLeft_toRightOf="@id/button7"
            app:layout_constraintRight_toLeftOf="@id/button14"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button6"
            app:layout_constraintBottom_toTopOf="@id/button16"
            app:layout_constraintRight_toLeftOf="@id/button10"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button10"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button7"
            app:layout_constraintBottom_toTopOf="@id/button17"
            app:layout_constraintLeft_toRightOf="@id/button9"
            app:layout_constraintRight_toLeftOf="@id/button11"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button11"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button8"
            app:layout_constraintBottom_toTopOf="@id/button18"
            app:layout_constraintLeft_toRightOf="@id/button10"
            app:layout_constraintRight_toLeftOf="@id/button15"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button12"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button20"
            app:layout_constraintLeft_toRightOf="@id/button2"
            app:layout_constraintBottom_toTopOf="@id/button13"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button13"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button12"
            app:layout_constraintBottom_toTopOf="@id/button14"
            app:layout_constraintLeft_toRightOf="@id/button5"
            app:layout_constraintRight_toLeftOf="@id/button21"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button14"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button13"
            app:layout_constraintBottom_toTopOf="@id/button15"
            app:layout_constraintLeft_toRightOf="@id/button8"
            app:layout_constraintRight_toLeftOf="@id/button22"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button15"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button14"
            app:layout_constraintBottom_toTopOf="@id/button19"
            app:layout_constraintLeft_toRightOf="@id/button11"
            app:layout_constraintRight_toLeftOf="@id/button23"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button16"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/button17"
            app:layout_constraintTop_toBottomOf="@id/button9"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button17"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/button16"
            app:layout_constraintRight_toLeftOf="@id/button18"
            app:layout_constraintTop_toBottomOf="@id/button10"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button18"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintRight_toLeftOf="@id/button19"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/button17"
            app:layout_constraintTop_toBottomOf="@id/button11"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button19"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/button18"
            app:layout_constraintRight_toLeftOf="@id/button24"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button20"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/button12"
            app:layout_constraintBottom_toTopOf="@id/button21"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button21"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button20"
            app:layout_constraintBottom_toTopOf="@id/button22"
            app:layout_constraintLeft_toRightOf="@id/button13"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button22"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button21"
            app:layout_constraintBottom_toTopOf="@id/button23"
            app:layout_constraintLeft_toRightOf="@id/button14"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button23"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/button22"
            app:layout_constraintBottom_toTopOf="@id/button24"
            app:layout_constraintLeft_toRightOf="@id/button15"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>

        <ImageButton
            android:id="@+id/button24"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/button19"
            app:layout_constraintTop_toBottomOf="@id/button23"
            android:background="@drawable/square_shape"
            android:scaleType="fitCenter">
        </ImageButton>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameInfoConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boardConstraintLayout">

        <TextView
            android:id="@+id/playerIndicatorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:text="@string/player_indicator_string"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playerIndicatorTextView"
            app:layout_constraintBottom_toTopOf="@id/undoButton"
            android:text="@string/timer_string"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/turnTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Turn:"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/restartButton"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playerIndicatorTextView"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/timerCountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timerTextView"

            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/turnCountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/turnTextView"
            app:layout_constraintWidth_percent="0.3" />

        <Button
            android:id="@+id/undoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/settingButton"
            app:layout_constraintTop_toBottomOf="@id/timerCountTextView"
            android:text="@string/undo_button_string"
            />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/undoButton"
            app:layout_constraintRight_toLeftOf="@id/restartButton"
            app:layout_constraintTop_toBottomOf="@id/timerCountTextView"
            android:text="@string/settings_button_string"/>

        <Button
            android:id="@+id/restartButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/settingButton"
            app:layout_constraintTop_toBottomOf="@id/turnCountTextView"
            android:text="@string/restart_button_string"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>